# energy-py-linear

./: .gitignore  CHANGELOG.md  Makefile  README.md  ev_heatmap.py  mypy.ini  pyproject.toml  readme.md  requirements.txt  schematic.py  setup.py  todo.md  versions.json
.github/workflows/: publish.yml  test.yml
0.1.2/: 404.html  index.html  sitemap.xml
0.1.2/getting-started/: index.html
0.1.2/search/: search_index.json
0.1.2/validation/: index.html
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/getting-started/: index.html
0.2.0/performance/: index.html
0.2.0/search/: search_index.json
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/getting-started/: index.html
0.2.1/search/: search_index.json
1.0.0/: 404.html  index.html  sitemap.xml
1.0.0/changelog/: index.html
1.0.0/getting-started/: index.html
1.0.0/performance/: index.html
1.0.0/search/: search_index.json
1.1.0/: 404.html  index.html  sitemap.xml
1.1.0/changelog/: index.html
1.1.0/getting-started/: index.html
1.1.0/performance/: index.html
1.1.0/search/: search_index.json
1.1.1/: 404.html  index.html  sitemap.xml
1.1.1/changelog/: index.html
1.1.1/getting-started/: index.html
1.1.1/performance/: index.html
1.1.1/search/: search_index.json
1.2.0/: 404.html  index.html  sitemap.xml
1.2.0/changelog/: index.html
1.2.0/getting-started/: index.html
1.2.0/performance/: index.html
1.2.0/search/: search_index.json
1.3.0/: 404.html  index.html  sitemap.xml
1.3.0/changelog/: index.html
1.3.0/getting-started/: index.html
1.3.0/performance/: index.html
1.3.0/search/: search_index.json
1.4.0/: 404.html  index.html  sitemap.xml
1.4.0/changelog/: index.html
1.4.0/getting-started/: index.html
1.4.0/performance/: index.html
1.4.0/search/: search_index.json
battery/: battery.py  first_draft.py  make_logger.py
docs/: generate-plots.py  mkdocs.yml  requirements.txt
docs/docs/: changelog.md  index.md  performance.md  validation.md
energypylinear/: __init__.py  accounting.py  battery.py  chp.py  constraints.py  data.py  data_generation.py  debug.py  defaults.py  first.py  flags.py  frameworks.py  freq.py  interval_data.py  logger.py  make_logger.py  objectives.py  optimizer.py  plot.py  results.py  site.py  utils.py
energypylinear/accounting/: __init__.py  accounting.py
energypylinear/assets/: __init__.py  asset.py  battery.py  boiler.py  chp.py  ev.py  evs.py  heat_pump.py  renewable_generator.py  site.py  spill.py  valve.py
energypylinear/battery/: battery.py
energypylinear/chp/: __init__.py  assets.py  chp.py  chp_draft.py
energypylinear/results/: __init__.py  checks.py  extract.py  main.py  results.py  schema.py  warnings.py
energypylinear/tests/: test_battery.py  test_battery_economics.py  test_battery_efficiency.py  test_battery_optimization.py  test_battery_view.py  test_carbon.py
examples/: battery.py  chp.py  evs.py  forecast-accuracy.py
latest/changelog/: index.html
latest/getting-started/: index.html
latest/performance/: index.html
latest/validation/: index.html
notebooks/: forecast_quality.ipynb  intro_to_pulp.ipynb  space-between-expt.ipynb  space-between-money-and-the-planet.ipynb  space-between-viewer.ipynb
notebooks/data/: forecast_sample.csv
poc/: constraint-fun.py  multi-site.py  participant-optimization.py  schematic.py
tests/: assert-test-coverage.py  common.py  conftest.py  generate-test-docs.sh  test_accounting.py  test_asset_api.py  test_battery.py  test_battery_economics.py  test_battery_efficiency.py  test_battery_energy_balance.py  test_battery_losses.py  test_battery_optimization.py  test_battery_view.py  test_carbon.py  test_carbon_optimization.py  test_chp.py  test_complex_terms.py  test_constraints.py  test_custom_constraints.py  test_custom_objectives.py  test_custom_objectives_accounts.py  test_custom_objectives_complex_terms.py  test_debug.py  test_extra_interval_data.py  test_flags.py  test_freq.py  test_function_terms.py  test_interval_data.py  test_interval_vars.py  test_multisite.py  test_network_charges.py  test_optimizer.py  test_plot.py  test_repr.py  test_site.py  test_spill_warnings.py  test_timestep.py  test_utils.py  test_vars.py
tests/assets/: test_battery.py  test_chp.py  test_ev.py  test_evs.py  test_evs_hypothesis.py  test_heat_pump.py  test_renewable_generator.py  test_site.py
(+139 files in other folders)
