[tool.poetry]
name = "energypylinear"
version = "0.2.0"
description = "Optimizing energy assets with mixed-integer linear programming."
authors = ["Adam Green <adam.green@adgefficiency.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
PuLP = "^2.7.0"
numpy = "^1.23.4"
pydantic = "^1.10.2"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
rich = "^12.0.0"
seaborn = "^0.12.2"
pandera = "^0.14.5"
markdown-include = "^0.8.1"
structlog = "^23.1.0"

[tool.poetry.group.check.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8-docstring-checker = "^1.1"
ruff = "^0.0.275"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"
hypothesis = "^6.61.0"
phmdoctest = "^1.4.0"
nbmake = "^1.3.5"
pytest-sugar = "^0.9.6"
coverage-badge = "^1.1.0"
pytest-xdist = "^3.3.1"
pytest-cov = "^4.1.0"

[tool.poetry.group.develop.dependencies]
ipython = "^8.7.0"

[tool.poetry.group.static.dependencies]
mypy = "^0.991"


[tool.mypy]
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  'pandas',
  'matplotlib',
  'matplotlib.pyplot',
  'matplotlib.patches',
  'pulp',
  'seaborn'
]
ignore_missing_imports = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
