[tool.poetry]
name = "energypylinear"
version = "1.1.1"
description = "Optimizing energy assets with mixed-integer linear programming."
authors = ["Adam Green <adam.green@adgefficiency.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
PuLP = "^2.7.0"
numpy = "^1.26"
pydantic = "^2.0"
pandas = "^2.0"
matplotlib = "^3.6.2"
rich = "^12.0.0"
seaborn = "^0.12.2"
pandera = "^0.14.5"
markdown-include = "^0.8.1"
structlog = "^23.1.0"

[tool.poetry.group.check]
optional = true
[tool.poetry.group.check.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8-docstring-checker = "^1.1"
ruff = "^0.0.275"
darglint = "^1.8.1"

[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
coverage = "^7.2.0"
hypothesis = "^6.61.0"
phmdoctest = "^1.4.0"
nbmake = "^1.3.5"
pytest-sugar = "^0.9.6"
coverage-badge = "^1.1.0"
pytest-xdist = "^3.3.1"
pytest-cov = "^4.1.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.develop]
optional = true
[tool.poetry.group.develop.dependencies]
ipython = "^8.7.0"

[tool.poetry.group.static]
optional = true
[tool.poetry.group.static.dependencies]
mypy = "^0.991"


[tool.mypy]
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  'pandas',
  'matplotlib',
  'matplotlib.pyplot',
  'matplotlib.patches',
  'pulp',
  'seaborn',
  'bs4',
  'pytest',
  '_pytest.capture',
  'hypothesis'
]
ignore_missing_imports = true


[build-system]
requires = [
  "poetry-core",
  "setuptools>=60",
  "setuptools-scm>=8.0"
]
build-backend = "poetry.core.masonry.api"

[tool.setuptools_scm]

[tool.coverage.report]
exclude_also =[
  "@(abc\\.)?abstractmethod"
]
